# Advanced-topics-in-programming

./: README.md
HW1Code/: Algorithm.cpp  Algorithm.h  Direction.cpp  Direction.h  House.cpp  House.h  Makefile  Simulator.cpp  Simulator.h  Vacuum.cpp  Vacuum.h  input.txt  input_a.txt  input_b.txt  input_c.txt  output.txt  output_1.txt  output_input_a.txt  output_input_b.txt  output_input_c.txt
HW2Code/: Graph.cpp  Graph.h  House.cpp  House.h  Makefile  MyAlgorithm.cpp  MyAlgorithm.h  MyBatteryMeter.cpp  MyDirtSensor.cpp  MySimulator.cpp  MySimulator.h  MyWallSensor.cpp  Node.cpp  Node.h  README.md  Vacuum.cpp  Vacuum.h  dirt_sensor.h  input.txt  input_a.txt  input_b.txt  input_c.txt  output_input.txt  output_input_a.txt  output_input_b.txt  output_input_c.txt
HW3Code/: CMakeLists.txt  Known Issues.xlsx  README.md  summary.csv
HW3Code/House/: House.cpp  House.h
HW3Code/Houses/: h1.house  h10.house  h2.house  h3.hpuse  h5.house  h6.house  h7.house  h8.house  h9.house  hm4.error  hm4.house
HW3Code/OneFileProject/: pro  pro.cpp  summary.csv
HW3Code/OneFileProject/Houses/: h1.house  h2.house  hm4.house
HW3Code/OneFileProject/OutPut/: h1-Algo_123456789.txt  h1-MyAlgorithm.txt  h2-Algo_123456789.txt  h2-MyAlgorithm.txt
HW3Code/OutPut/: h1-Algo_123456789.txt  h1-MyAlgorithm.txt  h2-Algo_123456789.txt  h2-MyAlgorithm.txt
HW3Code/algorithm/Algorithm1/: Algorithm_A_318978152_212001192.cpp  Algorithm_A_318978152_212001192.h  CMakeLists.txt  MyAlgorithm.cpp  MyAlgorithm.h  MyBatteryMeter.h  MyWallSensor.h  XCMakeLists.txt
HW3Code/algorithm/Algorithm2/: Algo_123456789.cpp  Algo_123456789.h  Algorithm_B_318978152_212001192.cpp  Algorithm_B_318978152_212001192.h  CMakeLists.txt  MyBatteryMeter.h  XCMakeLists.txt
HW3Code/algorithm/Algorithm3/: Algorithm3.cpp  Algorithm3.h  MyDirtSensor.h
HW3Code/score/: score.cpp  score.h
HW3Code/simulator/: CMakeLists.txt  MySimulator.cpp  MySimulator.h  xCMakeLists.txt
HW3Code/vacuum/: vacuum.cpp  vacuum.h
